test/fixtures/error/pages/about.vue
<template>
  <div>
    <h1>About</h1>
    <nuxt-link to="/">
      back
    </nuxt-link>
  </div>
</template>
